--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,20 +3,16 @@
 
     <string name="app_id">vqIxZZdXOejJCFsirV3DR6pHabU5N8cEK5n4tQEP</string>
     <string name="client_id">DpYosXX6YZdfSBso6qbgnMpwSwV5JXS6SUTNDqs3</string>
-    <!-- Strings related to login -->
+
+
     <string name="prompt_email">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign In</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+
     <string name="title_activity_blinge_base">BlingeBaseActivity</string>
-    <string name="title_activity_blinge_landing_page">Order Information</string>
+    <string name="title_activity_blinge_landing_page">Blinge</string>
     <string name="title_activity_show_order_list">List Of Orders</string>
     <string name="action_settings">Settings</string>
+    <string name="help_line">1231231231</string>
 </resources>
